# MemoryTransformer

./: .gitignore  README.md  pyproject.toml
mform/: cli.py
mform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mform/configs/: cli_config.py
mform/model/: attention.py  ema_memory.py  feed_forward.py  memory_transformer.py  normalization.py  transformer.py
mform/scripts/: evaluation.py  generation.py  plotting.py  training.py
mform/workflow/: workflow.py
